# Assignm3-parallel-Algorithm

./: CMakeLists.txt  README.md  mpi_sparse_mult
include/: csr_matrix.hpp  csr_operations.hpp  mtx_loader.hpp
results_multicore/: results.py  speedup_metrics.csv  timing_results_OpenMP.csv  timing_results_mpi.csv  timing_results_sequential.csv
src/: csr_operations.cpp  main.cpp  mpi_sparse_mult.cpp  mtx_loader.cpp
